minor fixes & token with expiration time

--- a/.env.template
+++ b/.env.template
@@ -2,11 +2,12 @@
 PORT=8080
 
 # Passport
-SECRET=M1_5up3r*Ul7R4-S3cRE7
+SECRET=VmYq3t6w9z$C&F)J@NcRfUjWnZr4u7x!
 BCRYPT_SALT_ROUNDS=12
+TOKEN_TTL_SECS=10
 
 # DB
-STORAGE=./database/database.sqlite3
+STORAGE_PATH="./database/database.sqlite3"
 
 # Messages
 MSG_LIMIT=100
