--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "chat-backend",
+  "version": "1.0.0",
+  "description": "A simple REST API for a chat backend",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MarianoAIglesias1994/chat-backend.git"
+  },
+  "author": "Mariano Iglesias",
+  "license": "MIT",
   "main": "./lib/server.ts",
+  "scripts": {
+    "build": "tsc",
+    "dev": "nodemon --watch './lib/**/*.ts' --exec 'ts-node ./lib/server.ts' -e ts",
+    "start": "nodemon ./dist/lib/server.js",
+    "prod": "npm run build && npm run start"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
@@ -9,15 +24,10 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6"
-  },
-  "scripts": {
-    "build": "tsc",
-    "dev": "ts-node ./lib/server.ts",
-    "start": "nodemon ./dist/lib/server.js",
-    "prod": "npm run build && npm run start"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
